@@ -1,7 +1,0 @@
-etc
-usr/bin
-usr/lib/cgi-bin
-usr/sbin
-usr/share/man/man1
-usr/share/man/man8
-usr/share/pixmaps
